--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
    <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <title>200925978: Online Portfolio</title>
+   <title>Harriet Jack: Online Portfolio</title>
    </head>
    <body>
    
-   <img src="gy15hj.github.io/unilogo.png" width="50" height="50">
+   <img src="HarrietJack.github.io/unilogo.png" width="50" height="50">
    
    <hr>
    
@@ -37,7 +37,7 @@
    	
    <p><center>
    <a href="https://www.github.com/gy15hj/gy15hj.github.io">
-   <img border="0" alt="Assessment 2" src="gy15hj.github.io/modelgif.gif" width="210" height="210">
+   <img border="0" alt="Assessment 2" src="HarrietJack.github.io/modelgif.gif" width="210" height="210">
    </a>
    </p>
    
