--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    </head>
    <body>
    
-   <img src="HarrietJack.github.io/unilogo.png" width="50" height="50">
+   <img src="gy15hj/Portfolio/unilogo.png" width="50" height="50">
    
    <hr>
    
@@ -24,8 +24,8 @@
    <font size="3" face="helvetica" color="#11889B">Welcome to my online portfolio of work. I am a student at the University of Leeds currently undertaking a Masters in Geographical Information Systems (GIS). This online portfolio has been created as part of the 'Programming for GIS: Core Skills' module as a way to present my work and document the process of learning the coding language Python. <br><br> Please click the images below to access my work via the relevant GitHub repositories:</font>
    
    <p><center>
-   <a href="https://www.github.com/gy15hj/gy15hj.github.io">
-   <img border="0" alt="Assessment 1 ABM" src="gy15hj.github.io/modelgif.gif" width="210" height="210">
+   <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-1">
+   <img border="0" alt="Assessment 1 ABM" src="gy15hj/Portfolio/modelgif.gif" width="210" height="210">
    </a>
    </p>
    
@@ -36,8 +36,8 @@
    <font size="2" face="helvetica" color="#11889B">An ABM that simulates a set of <br> agents moving around their  <br> environment, eating and sharing <br> resources with other agents in <br> the model. </font>
    	
    <p><center>
-   <a href="https://www.github.com/gy15hj/gy15hj.github.io">
-   <img border="0" alt="Assessment 2" src="HarrietJack.github.io/modelgif.gif" width="210" height="210">
+   <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-2">
+   <img border="0" alt="Assessment 2" src="gy15hj/Portfolio/modelgif.gif" width="210" height="210">
    </a>
    </p>
    
