--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    
    <p><center>
    <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-1">
-   <img border="0" alt="Assessment 1 ABM" src="gy15hj/Portfolio/modelgif.gif" width="210" height="210">
+   <img border="0" alt="Assessment 1" src="gy15hj/Portfolio/modelgif.gif" width="210" height="210">
    </a>
    </p>
    
