--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
    	
    <p><center>
    <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-2">
-   <img border="0" alt="Assessment 2" src="gy15hj/Portfolio/modelgif.gif" width="210" height="210">
+   <img border="0" alt="Assessment 2" src="gy15hj/Portfolio/Twitter.png" width="210" height="210">
    </a>
    </p>
    
