--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    </head>
    <body>
    
-   <img src="unilogo.png" width="50" height="50">
+   <img src="Portfolio/unilogo.png" width="50" height="50">
    
    <hr>
    
