--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    
    <font size="3" face="helvetica" color="#11889B">Welcome to my online portfolio of work. I am a student at the University of Leeds currently undertaking a Masters in Geographical Information Systems (GIS). This online portfolio has been created as part of the 'Programming for GIS: Core Skills' module as a way to present my work and document the process of learning the coding language Python. <br><br> Please click the images below to access my work via the relevant GitHub repositories:</font>
    
-   <p><center>
+   <p>
    <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-1">
    <img border="0" alt="Assessment 1" src="modelgif.gif" width="210" height="210">
    </a>
@@ -35,7 +35,7 @@
    <br>
    <font size="2" face="helvetica" color="#11889B">An ABM that simulates a set of <br> agents moving around their  <br> environment, eating and sharing <br> resources with other agents in <br> the model. </font>
    	
-   <p><center>
+   <p>
    <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-2">
    <img border="0" alt="Assessment 2" src="gy15hj/Portfolio/Twitter.png" width="210" height="210">
    </a>
@@ -43,9 +43,9 @@
    
    <font position="20px" size="3" face="helvetica" color="#5A5C5D">Programming for GIS: Core Skills</font>
    <br>
-   <font size="3" face="helvetica" color="#5A5C5D">Assessment 1</font>
+   <font size="3" face="helvetica" color="#5A5C5D">Assessment 2</font>
    <br>
-   <font size="2" face="helvetica" color="#11889B">An ABM that simulates a set of <br> agents moving around their  <br> environment, eating and sharing <br> resources with other agents in <br> the model. </font>
+   <font size="2" face="helvetica" color="#11889B"> Twitter mining software <br> that allows the user <br> to search for Tweets by <br> key word or username <br> and then carry out sentiment analysis. </font>
    
    <br>
    <br>
