--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    </head>
    <body>
    
-   <img src="Portfolio/unilogo.png" width="50" height="50">
+   <img src="unilogo.png" width="50" height="50">
    
    <hr>
    
@@ -37,7 +37,7 @@
    	
    <p>
    <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-2">
-   <img border="0" alt="Assessment 2" src="gy15hj/Portfolio/Twitter.png" width="210" height="210">
+   <img border="0" alt="Assessment 2" src="Twitter.png" width="210" height="210">
    </a>
    </p>
    
