--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    <br>
    <font size="2" face="helvetica" color="#11889B">An ABM that simulates a set of <br> agents moving around their  <br> environment, eating and sharing <br> resources with other agents in <br> the model. </font>
    	
-   <p>
+   <p><centre>
    <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-2">
    <img border="0" alt="Assessment 2" src="Twitter.png" width="210" height="210">
    </a>
