--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
    
    <font position="20px" size="3" face="helvetica" color="#5A5C5D">Programming for GIS: Core Skills</font>
    <br>
-   <font size="3" face="helvetica" color="#5A5C5D">Assessment 1</font>
+   <font size="3" face="helvetica" color="#5A5C5D">Assessment 1: Python</font>
    <br>
    <font size="2" face="helvetica" color="#11889B">An ABM that simulates a set of <br> agents moving around their  <br> environment, eating and sharing <br> resources with other agents in <br> the model. </font>
    	
@@ -43,10 +43,22 @@
    
    <font position="20px" size="3" face="helvetica" color="#5A5C5D">Programming for GIS: Core Skills</font>
    <br>
-   <font size="3" face="helvetica" color="#5A5C5D">Assessment 2</font>
+   <font size="3" face="helvetica" color="#5A5C5D">Assessment 2: Python</font>
    <br>
    <font size="2" face="helvetica" color="#11889B"> Twitter mining software <br> that allows the user <br> to search for Tweets by <br> key word or username <br> and then carry out sentiment analysis. </font>
    
+   <p>
+   <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-1">
+   <img border="0" alt="Assessment 1" src="receipt.png" width="210" height="210">
+   </a>
+   </p>
+   
+   <font position="20px" size="3" face="helvetica" color="#5A5C5D">Big Data & Consumer Analytics</font>
+   <br>
+   <font size="3" face="helvetica" color="#5A5C5D">Assessment 1: R</font>
+   <br>
+   <font size="2" face="helvetica" color="#11889B"> Manipulation and analysis <br> of Dunnhumby transactional <br> data using R. </font>
+      
    <br>
    <br>
   
