--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
    <font size="2" face="helvetica" color="#11889B"> Twitter mining software <br> that allows the user <br> to search for Tweets by <br> key word or username <br> and then carry out sentiment analysis. </font>
    
    <p>
-   <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-1">
-   <img border="0" alt="Assessment 1" src="receipt.png" width="210" height="210">
+   <a href="https://www.github.com/gy15hj/GEOG5917-Assessment-1">
+   <img border="0" alt="Assessment 1" src="receipt.jpg" width="200" height="200">
    </a>
    </p>
    
