--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    
    <font size="3" face="helvetica" color="#11889B">Welcome to my online portfolio of work. I am a student at the University of Leeds currently undertaking a Masters in Geographical Information Systems (GIS). This online portfolio has been created as part of the 'Programming for GIS: Core Skills' module as a way to present my work and document the process of learning the coding language Python. <br><br> Please click the images below to access my work via the relevant GitHub repositories:</font>
    
-   <p>
+   <p><left>
    <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-1">
    <img border="0" alt="Assessment 1" src="modelgif.gif" width="210" height="210">
    </a>
@@ -48,6 +48,7 @@
    <br>
    <font size="2" face="helvetica" color="#11889B"> Twitter mining software <br> that allows the user <br> to search for Tweets by <br> key word or username <br> and then carry out sentiment analysis. </font>
    
+   <br>
       
    <p>
    <a href="https://www.github.com/gy15hj/GEOG5917-Assessment-1">
