--- a/index.html
+++ b/index.html
@@ -23,6 +23,22 @@
    
    <font size="3" face="helvetica" color="#11889B">Welcome to my online portfolio of work. I am a student at the University of Leeds currently undertaking a Masters in Geographical Information Systems (GIS). This online portfolio has been created as part of the 'Programming for GIS: Core Skills' module as a way to present my work and document the process of learning the coding language Python. <br><br> Please click the images below to access my work via the relevant GitHub repositories:</font>
    
+      
+   <div class="row">
+  <div class="column">
+    <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-1">
+    <img border="0" alt="Assessment 1" src="modelgif.gif" width="210" height="210">
+  </div>
+  <div class="column">
+    <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-2">
+    <img border="0" alt="Assessment 2" src="Twitter.png" width="190" height="190">
+  </div>
+  <div class="column">
+    <a href="https://www.github.com/gy15hj/GEOG5917-Assessment-1">
+    <img border="0" alt="Assessment 1" src="receipt.jpg" width="190" height="190">
+  </div>
+</div>
+      
    <p><right>
    <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-1">
    <img border="0" alt="Assessment 1" src="modelgif.gif" width="210" height="210">
