--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
    
    <font size="3" face="helvetica" color="#11889B">Welcome to my online portfolio of work. I am a student at the University of Leeds currently undertaking a Masters in Geographical Information Systems (GIS). This online portfolio has been created as part of the 'Programming for GIS: Core Skills' module as a way to present my work and document the process of learning the coding language Python. <br><br> Please click the images below to access my work via the relevant GitHub repositories:</font>
   
+   <style>
+* {
+  box-sizing: border-box;
+}
+
+.row {
+  display: flex;
+}
+
+
    /* Create three equal columns that sits next to each other */
    .column {
     flex: 33.33%;
