--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    <title>Harriet Jack: Online Portfolio</title>
+   <style>
+   * {
+   box-sizing: border-box;
+   }
+
+   .row {
+   display: flex;
+   }
+
+   .column {
+   flex: 33.33%;
+   padding: 5px;
+   }
+   </style>
    </head>
    <body>
    
