--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 .row {
   display: flex;
 }
-
-/* Create three equal columns that sits next to each other */
+  
 .column {
   flex: 33.33%;
   padding: 5px;
@@ -20,17 +19,28 @@
 </head>
 <body>
 
-<h2>Harriet Jack: Online Portfolio</h2>
+<img src="unilogo.png" width="50" height="50">  
+
+<hr>
+<br>
+<center><font size="6" face="helvetica" color="#5A5C5D"> Harriet Jack: Online Portfolio</font></center>
+<br>
+<hr>
+<br>
+  
 <p>Welcome to my online portfolio of work.</p>
 
 <div class="row">
   <div class="column">
+    <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-1">
     <img src="modelgif.gif" alt="Assessment 1" style="width:100%">
   </div>
   <div class="column">
+    <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-2">
     <img src="Twitter.png" alt="Assessment 2" style="width:100%">
   </div>
   <div class="column">
+    <a href="https://www.github.com/gy15hj/GEOG5917-Assessment-1">
     <img src="receipt.jpg" alt="Assessment 1" style="width:100%">
   </div>
 </div>
