--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div class="row">
   <div class="column">
     <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-1">
-    <img src="modelgif.gif" alt="Assessment 1" width="210" height="210" align=center>
+    <img src="modelgif.gif" alt="Assessment 1" style="width:75%">
   </div>
   <div class="column">
     <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-2">
