--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 <div class="row">
   <div class="column">
     <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-1">
-    <img src="modelgif.gif" alt="Assessment 1" style="width:75%">
+    <img src="modelgif.gif" alt="Assessment 1" width="210" height="210" class="center">
   </div>
   <div class="column">
     <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-2">
-    <img src="Twitter.png" alt="Assessment 2" width="210" height="210">
+    <img src="Twitter.png" alt="Assessment 2" width="210" height="210" class="center">
   </div>
   <div class="column">
     <a href="https://www.github.com/gy15hj/GEOG5917-Assessment-1">
-    <img src="receipt.jpg" alt="Assessment 1" width="210" height="210">
+    <img src="receipt.jpg" alt="Assessment 1" width="210" height="210" class="center">
   </div>
 </div>
     
