--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 <hr>
 <br>
   
-<p>Welcome to my online portfolio of work.</p>
+<p><font size="3" face="helvetica" color="#11889B">Welcome to my online portfolio of work completed as part of the MSc in GIS course that I am undertaking at the University of Leeds. <br><br> Please click the images below to access my work via the relevant GitHub repositories:</font></p>
 
 <div class="row">
   <div class="column">
     <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-1">
-    <img border="2" src="modelgif.gif" alt="Assessment 1" width="210" height="210" class="center">
+    <img src="modelgif.gif" alt="Assessment 1" width="210" height="210" class="center">
   </div>
   <div class="column">
     <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-2">
