--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <hr>
 <br>
   
-<p><font size="3" face="helvetica" color="#11889B">Welcome to my online portfolio of work completed as part of the MSc in GIS course that I am undertaking at the University of Leeds. <br><br> Please click the images below to access my work via the relevant GitHub repositories:</font></p>
+<p><font size="3" face="helvetica" color="#11889B">Welcome to the online portfolio of work completed as part of the MSc in GIS course that I am undertaking at the University of Leeds. This webpage has been created using HTML and documents the process of learning both Python and R. <br><br> Please click the images below to access my work via the relevant GitHub repositories:</font></p>
 
 <div class="row">
   <div class="column">
@@ -47,7 +47,7 @@
     
 <div class="row">
   <div class="column">
-    <font position="20px" size="3" face="helvetica" color="#5A5C5D">Programming for GIS: Core Skills</font>
+    <font position="20px" size="3" face="helvetica" color="#5A5C5D" style="text-decoration:none">Programming for GIS: Core Skills</font>
     <br>
     <font size="3" face="helvetica" color="#5A5C5D">Assessment 1: Python</font>
     <br>
