--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <div class="row">
   <div class="column">
-    <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-1">
+    <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-1" style="text-decoration:none">
     <img src="modelgif.gif" alt="Assessment 1" width="210" height="210" class="center">
   </div>
   <div class="column">
