--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 }
 </style>
 </head>
+
 <body>
 
 <img src="unilogo.png" width="50" height="50">  
@@ -33,21 +34,21 @@
 <div class="row">
   <div class="column">
     <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-1" style="text-decoration:none">
-    <img src="modelgif.gif" alt="Assessment 1" width="210" height="210" class="center">
+    <img src="modelgif.gif" alt="Assessment 1" style="width:60%">
   </div>
   <div class="column">
     <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-2">
-    <img src="Twitter.png" alt="Assessment 2" width="190" height="190" class="center">
+    <img src="Twitter.png" alt="Assessment 2" style="width:60%">
   </div>
   <div class="column">
     <a href="https://www.github.com/gy15hj/GEOG5917-Assessment-1">
-    <img src="receipt.jpg" alt="Assessment 1" width="190" height="190" class="center">
+    <img src="receipt.jpg" alt="Assessment 1" style="width:60%">
   </div>
 </div>
     
 <div class="row">
   <div class="column">
-    <font position="20px" size="3" face="helvetica" color="#5A5C5D" style="text-decoration:none">Programming for GIS: Core Skills</font>
+    <font position="20px" size="3" face="helvetica" color="#5A5C5D">Programming for GIS: Core Skills</font>
     <br>
     <font size="3" face="helvetica" color="#5A5C5D">Assessment 1: Python</font>
     <br>
