--- a/index.html
+++ b/index.html
@@ -36,19 +36,6 @@
   <div class="column">
     <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-1" style="text-decoration:none">
     <img src="modelgif.gif" alt="Assessment 1" style="width:60%">
-  </div>
-  <div class="column">
-    <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-2">
-    <img src="Twitter.png" alt="Assessment 2" style="width:60%">
-  </div>
-  <div class="column">
-    <a href="https://www.github.com/gy15hj/GEOG5917-Assessment-1">
-    <img src="receipt.jpg" alt="Assessment 1" style="width:60%">
-  </div>
-</div>
-    
-<div class="row">
-  <div class="column">
     <font position="20px" size="3" face="helvetica" color="#5A5C5D">Programming for GIS: Core Skills</font>
     <br>
     <font size="3" face="helvetica" color="#5A5C5D">Assessment 1: Python</font>
@@ -56,18 +43,22 @@
     <font size="2" face="helvetica" color="#11889B">An ABM that simulates a set of <br> agents moving around their  <br> environment, eating and sharing <br> resources with other agents in <br> the model. </font>
   </div>
   <div class="column">
+    <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-2" style="text-decoration:none">
+    <img src="Twitter.png" alt="Assessment 2" style="width:60%">
     <font position="20px" size="3" face="helvetica" color="#5A5C5D">Programming for GIS: Core Skills</font>
-   <br>
-   <font size="3" face="helvetica" color="#5A5C5D">Assessment 2: Python</font>
-   <br>
-   <font size="2" face="helvetica" color="#11889B"> Twitter mining software <br> that allows the user <br> to search for Tweets by <br> key word or username <br> and then carry out sentiment analysis. </font>
+    <br>
+    <font size="3" face="helvetica" color="#5A5C5D">Assessment 2: Python</font>
+    <br>
+    <font size="2" face="helvetica" color="#11889B"> Twitter mining software <br> that allows the user <br> to search for Tweets by <br> key word or username <br> and then carry out sentiment analysis. </font>
   </div>
   <div class="column">
+    <a href="https://www.github.com/gy15hj/GEOG5917-Assessment-1" style="text-decoration:none">
+    <img src="receipt.jpg" alt="Assessment 1" style="width:60%">
     <font position="20px" size="3" face="helvetica" color="#5A5C5D">Big Data & Consumer Analytics</font>
-   <br>
-   <font size="3" face="helvetica" color="#5A5C5D">Assessment 1: R</font>
-   <br>
-   <font size="2" face="helvetica" color="#11889B"> Manipulation and analysis <br> of Dunnhumby transactional <br> data using R. </font>
+    <br>
+    <font size="3" face="helvetica" color="#5A5C5D">Assessment 1: R</font>
+    <br>
+    <font size="2" face="helvetica" color="#11889B"> Manipulation and analysis <br> of Dunnhumby transactional <br> data using R. </font>
   </div>
 </div>
 
