--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div class="column">
     <p>
     <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-1" style="text-decoration:none">
-    <img src="modelgif.gif" alt="Assessment 1" width="210" height="210">
+    <img src="model.jpg" alt="Assessment 1" style="width:60%">
     </p>
     <font position="20px" size="3" face="helvetica" color="#5A5C5D">Programming for GIS: Core Skills</font>
     <br>
@@ -48,7 +48,7 @@
   <div class="column">
     <p>
     <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-2" style="text-decoration:none">
-    <img src="Twitter.png" alt="Assessment 2" width="190" height="190">
+    <img src="Twitter.png" alt="Assessment 2" style="width:60%">
     </p>
     <font position="20px" size="3" face="helvetica" color="#5A5C5D">Programming for GIS: Core Skills</font>
     <br>
@@ -60,7 +60,7 @@
   <div class="column">
     <p>
     <a href="https://www.github.com/gy15hj/GEOG5917-Assessment-1" style="text-decoration:none">
-    <img src="receipt.jpg" alt="Assessment 1" width="190" height="190">
+    <img src="receipt.jpg" alt="Assessment 1" style="width:60%">
     </p>
     <font position="20px" size="3" face="helvetica" color="#5A5C5D">Big Data & Consumer Analytics</font>
     <br>
