--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div class="column">
     <p>
     <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-1" style="text-decoration:none">
-    <img src="model.jpg" alt="Assessment 1" style="width:60%">
+    <img src="model.jpg" alt="Assessment 1" style="width:50%">
     </p>
     <font position="20px" size="3" face="helvetica" color="#5A5C5D">Programming for GIS: Core Skills</font>
     <br>
@@ -48,26 +48,26 @@
   <div class="column">
     <p>
     <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-2" style="text-decoration:none">
-    <img src="Twitter.png" alt="Assessment 2" style="width:60%">
+    <img src="Twitter.png" alt="Assessment 2" style="width:50%">
     </p>
     <font position="20px" size="3" face="helvetica" color="#5A5C5D">Programming for GIS: Core Skills</font>
     <br>
     <font size="3" face="helvetica" color="#5A5C5D">Assessment 2: Python</font>
     </a>
     <br>
-    <font size="2" face="helvetica" color="#11889B"> Twitter mining software <br> that allows the user <br> to search for Tweets by <br> key word or username <br> and then carry out sentiment analysis. </font>
+    <font size="2" face="helvetica" color="#11889B"> Twitter mining software that allows <br> the user to search for Tweets by key word <br> or username and then carry out sentiment analysis. </font>
   </div>
   <div class="column">
     <p>
     <a href="https://www.github.com/gy15hj/GEOG5917-Assessment-1" style="text-decoration:none">
-    <img src="receipt.jpg" alt="Assessment 1" style="width:60%">
+    <img src="receipt.jpg" alt="Assessment 1" style="width:50%">
     </p>
     <font position="20px" size="3" face="helvetica" color="#5A5C5D">Big Data & Consumer Analytics</font>
     <br>
     <font size="3" face="helvetica" color="#5A5C5D">Assessment 1: R</font>
     </a>
     <br>
-    <font size="2" face="helvetica" color="#11889B"> Manipulation and analysis <br> of Dunnhumby transactional <br> data using R. </font>
+    <font size="2" face="helvetica" color="#11889B"> Manipulation and analysis of Dunnhumby <br> transactional data using R. </font>
   </div>
 </div>
 
