--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <font size="3" face="helvetica" color="#5A5C5D">Assessment 1: Python</font>
     </a>
     <br>
-    <font size="2" face="helvetica" color="#11889B">An ABM that simulates a set of <br> agents moving around their  <br> environment, eating and sharing <br> resources with other agents in <br> the model. </font>
+    <font size="2" face="helvetica" color="#11889B">An ABM that simulates a set of agents moving <br> around their environment, eating and sharing <br> resources with other agents in the model. </font>
   </div>
   <div class="column">
     <p>
