--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <font size="3" face="helvetica" color="#5A5C5D">Assessment 2: Python</font>
     </a>
     <br>
-    <font size="2" face="helvetica" color="#11889B"> Twitter mining software that allows <br> the user to search for Tweets by key word <br> or username and then carry out sentiment analysis. </font>
+    <font size="2" face="helvetica" color="#11889B"> Twitter mining software that allows the user <br> to search for Tweets by key word or username <br> and then carry out sentiment analysis. </font>
   </div>
   <div class="column">
     <p>
@@ -67,7 +67,7 @@
     <font size="3" face="helvetica" color="#5A5C5D">Assessment 1: R</font>
     </a>
     <br>
-    <font size="2" face="helvetica" color="#11889B"> Manipulation and analysis of Dunnhumby <br> transactional data using R. </font>
+    <font size="2" face="helvetica" color="#11889B"> Manipulation and analysis of Dunnhumby <br> transactional data using R to investigate <br> the impact of coupons on sales. </font>
   </div>
 </div>
 
