--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-background-color: #D3D3D3 
+background-color: #D3D3D3; 
 * {
   box-sizing: border-box;
 }
