--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <hr>
 <br>
   
-<p><font size="3" face="helvetica" color="#11889B">Welcome to the online portfolio of work completed as part of the MSc in GIS course that I am undertaking at the University of Leeds. This webpage has been created using HTML and documents the process of learning both Python and R. <br><br> Please click the images below to access my work via the relevant GitHub repositories:</font></p>
+<p><font size="3" face="helvetica" color="#11889B">Welcome to the online portfolio of work completed as part of the MSc in GIS course that I am undertaking at the University of Leeds. This webpage has been created using HTML and documents the process of learning both Python and R. <br><br> Please click below to access examples my work via the relevant GitHub repositories:</font></p>
 
 <div class="row">
   <div class="column">
