--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
   </div>
 </div>
 
+<p><font size="3" face="helvetica" color="#11889B"> Telephone: 07858066779 <br> Email: harriet.g.jack@gmail.com <br>
+
+<a href="https://www.linkedin.com/in/harriet-jack-865454132/">
+  <font size="3" face="helvetica" color="#11889B">LinkedIn: Harriet Jack</font></a>
+  </p>
+  
 </body>
 </html>
 
