--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 <body>
 
+<br>
 <hr>
 <center><font size="6" face="helvetica" color="#5A5C5D"> Harriet Jack: Online Portfolio</font></center>
 <hr>
@@ -79,11 +80,10 @@
 <br> 
 <hr>
 
-<p><font size="3" face="helvetica" color="#11889B"> Telephone: 07858066779 <br> Email: harriet.g.jack@gmail.com <br>
-
+<center><p><font size="3" face="helvetica" color="#5A5C5D"> Telephone: 07858066779 Email: harriet.g.jack@gmail.com 
 <a href="https://www.linkedin.com/in/harriet-jack-865454132/" style="text-decoration:none">
 <font size="3" face="helvetica" color="#11889B">LinkedIn: Harriet Jack</font></a>
-  </p>
+  </p></center>
 
 <hr>
 <br>
