--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 <br> 
 <hr>
 
-<center><p><font size="3" face="helvetica" color="#5A5C5D"> Telephone: 07858066779 Email: harriet.g.jack@gmail.com 
+<center><p><font size="3" face="helvetica" color="#5A5C5D"> 07858066779 <&nbsp><&nbsp> harriet.g.jack@gmail.com <&nbsp><&nbsp>
 <a href="https://www.linkedin.com/in/harriet-jack-865454132/" style="text-decoration:none">
-<font size="3" face="helvetica" color="#11889B">LinkedIn: Harriet Jack</font></a>
+<font size="3" face="helvetica" color="#5A5C5D">LinkedIn</font></a>
   </p></center>
 
 <hr>
