--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <br> 
 <hr>
 
-<pre><center><p><font size="3" face="helvetica" color="#5A5C5D"> 07858066779     harriet.g.jack@gmail.com     </pre>     
+<center><p><font size="3" face="helvetica" color="#5A5C5D"> 07858066779 &nbsp;&nbsp; harriet.g.jack@gmail.com &nbsp;&nbsp; 
 <a href="https://www.linkedin.com/in/harriet-jack-865454132/" style="text-decoration:none">
 <font size="3" face="helvetica" color="#5A5C5D">LinkedIn</font></a>
   </p></center>
