--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <p><font size="3" face="helvetica" color="#11889B">Welcome to the online portfolio of work completed as part of the MSc in GIS course that I am undertaking at the University of Leeds. This webpage has been created using HTML and documents the process of learning both Python and R. <br><br> Please click below to access examples my work via the relevant GitHub repositories:</font></p>
 
 <div class="row">
-  <div class="column" style="background-color:#D3D3D3; text-align:center; vertical-align: middle; padding:50px 100px;">
+  <div class="column" style="background-color:#D3D3D3; text-align:center; vertical-align: middle; padding:40px 20px; width: 60%">
     <p>
     <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-1" style="text-decoration:none">
     <font position="20px" size="3" face="helvetica" color="#5A5C5D">Programming for GIS: Core Skills</font>
