--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <p><font size="3" face="helvetica" color="#11889B">Welcome to the online portfolio of work completed as part of the MSc in GIS course that I am undertaking at the University of Leeds. This webpage has been created using HTML and documents the process of learning both Python and R. <br><br> Please click below to access examples my work via the relevant GitHub repositories:</font></p>
 
 <div class="row">
+  <p>
   <div class="column" style="background-color:#D3D3D3; text-align:center; vertical-align: middle; padding:40px 20px; width: 50%">
     <p>
     <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-1" style="text-decoration:none">
@@ -44,7 +45,7 @@
     <p>
     <font size="2" face="helvetica" color="#11889B">An ABM that simulates a set of agents moving <br> around their environment, eating and sharing <br> resources with other agents in the model. </font>
     </p>
-  </div>
+  </div></p>
   <div class="column" style="background-color:#D3D3D3; text-align:center; vertical-align: middle; padding:40px 20px; width: 50%">
     <p>
     <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-2" style="text-decoration:none">
