--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <div class="row">
   <p>
-  <div class="column" style="background-color:#D3D3D3; text-align:center; vertical-align: middle; padding:40px 20px; width: 50%">
+  <div class="column" style="background-color:#D3D3D3; text-align:center; vertical-align: middle; padding:40px 20px; border: 10px white;">
     <p>
     <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-1" style="text-decoration:none">
     <font position="20px" size="3" face="helvetica" color="#5A5C5D">Programming for GIS: Core Skills</font>
@@ -46,7 +46,7 @@
     <font size="2" face="helvetica" color="#11889B">An ABM that simulates a set of agents moving <br> around their environment, eating and sharing <br> resources with other agents in the model. </font>
     </p>
   </div></p>
-  <div class="column" style="background-color:#D3D3D3; text-align:center; vertical-align: middle; padding:40px 20px; width: 50%">
+  <div class="column" style="background-color:#D3D3D3; text-align:center; vertical-align: middle; padding:40px 20px; width: 50%;">
     <p>
     <a href="https://www.github.com/gy15hj/GEOG5990-Assessment-2" style="text-decoration:none">
     <font position="20px" size="3" face="helvetica" color="#5A5C5D">Programming for GIS: Core Skills</font>
@@ -61,7 +61,7 @@
     <font size="2" face="helvetica" color="#11889B"> Twitter mining software that allows the user <br> to search for Tweets by key word or username <br> and then carry out sentiment analysis. </font>
     </p>
  </div>
-  <div class="column" style="background-color:#D3D3D3; text-align:center; vertical-align: middle; padding:40px 20px; width: 50%">
+  <div class="column" style="background-color:#D3D3D3; text-align:center; vertical-align: middle; padding:40px 20px; width: 50%;">
     <p>
     <a href="https://www.github.com/gy15hj/GEOG5917-Assessment-1" style="text-decoration:none">
     <font position="20px" size="3" face="helvetica" color="#5A5C5D">Big Data & Consumer Analytics</font>
